<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMasuk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_idMasuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="id" />

            <TextView
                android:id="@+id/tv_item_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_mainan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_merk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/merk" />

            <TextView
                android:id="@+id/tv_item_satuan2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/satuan" />

            <TextView
                android:id="@+id/tv_item_harga2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/harga" />

            <TextView
                android:id="@+id/tv_item_qty2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/jumlah" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imgAdd"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_add"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/hapus_data"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>