<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".CreateActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tambah_data"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/edIdMainan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Id mainan"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColorHint="#686868" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edNamaMainan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nama_mainan"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColorHint="#686868" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edMerk"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/merk"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColorHint="#686868" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edHarga"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/harga"
        android:inputType="number"
        android:maxLength="20"
        android:textColorHint="#686868" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Spinner
        android:id="@+id/spSatuan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#1E785A"
        android:text="@string/simpan"
        app:cornerRadius="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>