<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".FormEditDataDiriActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-black"
        android:text="Edit Data Diri"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/edNamaDiri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="Nama Lengkap (sesuai KTP)"
        android:inputType="none"
        android:maxLength="40"
        android:textColor="#AAAAAA"
        android:textColorHint="#B1B1B1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edEmailDiri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:textColorHint="#B1B1B1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edNoHPDiri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/no_handphone"
        android:inputType="number"
        android:maxLength="50"
        android:textColorHint="#B1B1B1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edAlamatDiri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:hint="@string/alamat_sesuai_ktp"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="#AAAAAA"
        android:textColorHint="#B1B1B1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/edHakAksesDiri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="Hak Akses"
        android:inputType="none"
        android:maxLength="40"
        android:textColor="#AAAAAA"
        android:textColorHint="#B1B1B1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnSimpanDataDiri"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#1E785A"
        app:cornerRadius="20dp"
        android:text="@string/simpan" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>